--- a/notebooks/init_explore.ipynb
+++ b/notebooks/init_explore.ipynb
@@ -909,6 +909,32 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5698354413164695\n",
+      "0.25373997008023935\n",
+      "0.17642458860329116\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((preprocessed_train[preprocessed_train[\"label\"] == 0]).shape[0] / preprocessed_train.shape[0])\n",
+    "print((preprocessed_train[preprocessed_train[\"label\"] == 1]).shape[0] / preprocessed_train.shape[0])\n",
+    "print((preprocessed_train[preprocessed_train[\"label\"] == 2]).shape[0] / preprocessed_train.shape[0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
