--- a/notebooks/init_explore.ipynb
+++ b/notebooks/init_explore.ipynb
@@ -912,22 +912,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5698354413164695\n",
-      "0.25373997008023935\n",
-      "0.17642458860329116\n"
+      "1.754892601431981\n",
+      "3.941042476215999\n",
+      "5.668144151088842\n"
      ]
     }
    ],
    "source": [
-    "print((preprocessed_train[preprocessed_train[\"label\"] == 0]).shape[0] / preprocessed_train.shape[0])\n",
-    "print((preprocessed_train[preprocessed_train[\"label\"] == 1]).shape[0] / preprocessed_train.shape[0])\n",
-    "print((preprocessed_train[preprocessed_train[\"label\"] == 2]).shape[0] / preprocessed_train.shape[0])"
+    "n_0 = (preprocessed_train[preprocessed_train[\"label\"] == 0]).shape[0]\n",
+    "n_1 = (preprocessed_train[preprocessed_train[\"label\"] == 1]).shape[0]\n",
+    "n_2 = (preprocessed_train[preprocessed_train[\"label\"] == 2]).shape[0]\n",
+    "summed = n_0+n_1+n_2\n",
+    "print(summed/ n_0)\n",
+    "print(summed / n_1)\n",
+    "print(summed / n_2)"
    ],
    "metadata": {
     "collapsed": false,
